# RAKIS

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt  net-interface-setup.sh
CI-Examples/curl/: .gitignore  Makefile  README.md  curl-format.txt  curl.manifest.template
CI-Examples/iperf3/: .gitignore  Makefile  README.md  iperf3.manifest.template  (+2 more)
libos/: meson.build
rakis/: meson.build
rakis/include/lwip/: api.h  arch.h  arch_cc.h  def.h  etharp.h  ethernet.h  inet.h  inet_chksum.h  ip.h  ip4.h  ip4_addr.h  ip_addr.h  lwipopts.h  mem.h  netif.h  opt.h  pbuf.h  raw.h  sockets.h  udp.h
rakis/include/lwip/prot/: udp.h
rakis/include/rakis/: atomics.h  common.h  host_init.h  if_xdp.h  io_uring.h  linux_host.h  linux_io_uring.h  monitor.h  net_thread.h  netif.h  pal.h  pktbpool.h  pktq.h  rakis.h  rakis_memcpy.h  rakis_ring.h  rakis_socket.h  verified_structs.h  xsk.h
rakis/include/rakis/fuzz/: fuzz_sockets.h  host.h  log.h
rakis/include/rakis/fv/: host.h  model.h  ping_reply_server.h
rakis/include/rakis/stack/: rakis_event.h  rakis_misc.h  rakis_rwlock.h  rakis_spinlock.h  stack.h
rakis/sec/fuzzer/: .gitignore  Makefile  fuzz_sockets.c  main.c
rakis/sec/fuzzer/testcases/: dump_arp_pkt  dump_one_pkt
rakis/sec/verification/: .gitignore  Makefile  main.c  ping_reply_server.c
rakis/trusted/: rakis_memcpy.c
rakis/trusted/libos/: init.c  net_thread.c  netif.c  pktbpool.c  pktq.c  rakis_socket.c  xsk.c
rakis/trusted/libos/stack/: rakis_event.c  rakis_misc.c  rakis_rwlock.c  stack.c
rakis/trusted/libos/stack/lwip/: err.c  ethernet.c  inet_chksum.c  mem.c  netif.c  pbuf.c  raw.c  sockets.c  udp.c
rakis/trusted/libos/stack/lwip/ipv4/: etharp.c  ip4.c  ip4_addr.c
rakis/trusted/pal/: initialization_data_checker.c  io_uring.c  pal.c  pal_direct.c  pal_sgx.c
rakis/untrusted/: host_init.c  monitor.c
(+64 files in other folders)
